--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Tim小助手</string>
-    <string name="setting_message">配置更改</string>
+    <string name="setting_message">Github Suzhelan/TimTool</string>
 </resources>
