--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Tim小助手</string>
     <string name="setting_message">Github Suzhelan/TimTool</string>
+    <string name="simple_desc">Tim功能性Xposed模块</string>
+
+    <string name="build_info">
+        构建版本：%s\n
+        构建时间：%s\n
+    </string>
+
+
+    <string name="github">Github</string>
+
 </resources>
