feat:Add a help option to the app home page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="time_size">大小(dp)</string>
     <string name="view_update_log">历史更新日志</string>
 
+    <string name="help">使用教程,疑难杂症</string>
     <string name="hide_icon">隐藏桌面图标</string>
 
     <string name="me_daytime_bubble">自己-常规模式</string>
